# rag-lab

./: .gitignore  README.md  pyproject.toml
rag/: README.md  app_gradio.py  config.py  index.py  llm_ollama.py  load_docs_lc.py  main.py  query.py  visualize.py
